{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "9bc21dab-2533-4dfb-b6b2-1c5e74d532fd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "41b48146-c8fa-4346-9aac-a5fb69b33fab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "924d1795-b3df-499e-bfd1-8dbff7e066da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "eb6b74d5-ba08-4d7c-ae59-8c27a3f25795",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "769956be-dbf2-41a3-b817-9a346c97d916",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "11cdad8c-888d-4fb4-9589-2c95f828710f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f00e50f4-7cd8-471f-8dd6-52ef0582616a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1ebceb87-1d52-4f43-8e60-3be07cdbba3d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "104362c5-df3f-4ed3-856b-87c263e36dab",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}